# bazel-cc-toolchain-tutorial

./: .bazelrc  WORKSPACE
examples/hello_cpp/: BUILD.bazel  hello-greet.cc  hello-greet.h  hello-test.cc  hello-world.cc
toolchain/: BUILD  cc_toolchain_config.bzl
