load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "hello-greet",
    srcs = ["hello-greet.cc"],
    hdrs = ["hello-greet.h"],
)

cc_binary(
    name = "hello-cpp",
    srcs = ["hello-world.cc"],
    deps = [
        ":hello-greet",
    ],
)

cc_test(
    name = "hello-test",
    srcs = ["hello-test.cc"],
    deps = [
        ":hello-greet",
        "@com_google_googletest//:gtest_main",
    ],
)
